[SPv2] Switch the application order between effects and CSS clip

According to SVG spec, clipping, masking, and opacity applies after
filter. The CSS version follows the same order. This is also what SPv1
and other vendors implemented.

BUG=707455
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2

Review-Url: https://codereview.chromium.org/2793753002
Cr-Commit-Position: refs/heads/master@{#461541}

Former-commit-id: 6b2de0f362490dc4823e64976d9682c37a62c64d